@@ -18,9 +18,16 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2004-11-05  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/amd64/diveby3.asm: New file.
+
+	* config.guess: Strip any PPC string in /proc/cpuinfo.
+	Recognize 970 in that code.
+
 2004-11-01  Torbjorn Granlund  <tege@swox.com>
 
-	* mpn/amd64/mul_basecase,asm: New file.
+	* mpn/amd64/mul_basecase.asm: New file.
 
 	* mpn/amd64/redc_1.asm: New file.
 
